Opened 8 years ago
Closed 8 years ago
#13135 closed bug (fixed)
[Patch] servers/notification/NotificationWindow.cpp: fix memory leak
Reported by: | mt | Owned by: | pulkomandy |
---|---|---|---|
Priority: | normal | Milestone: | Unscheduled |
Component: | Servers/notification_server | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
In NotificationWindow::MessageReceived(), memory allocated to 'view' at line 171 [1] could leak at line 208 [2] if 'allow' is false at line 190 [3].
[1] http://cgit.haiku-os.org/haiku/tree/src/servers/notification/NotificationWindow.cpp#n171 [2] http://cgit.haiku-os.org/haiku/tree/src/servers/notification/NotificationWindow.cpp#n208 [3] http://cgit.haiku-os.org/haiku/tree/src/servers/notification/NotificationWindow.cpp#n190
Attachments (2)
Change History (5)
by , 8 years ago
Attachment: | 0042-NotificationWindow.cpp-fix-memory-leak.patch added |
---|
comment:1 by , 8 years ago
patch: | 0 → 1 |
---|
by , 8 years ago
Attachment: | report-508553.html added |
---|
comment:3 by , 8 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Note:
See TracTickets
for help on using tickets.
Report by Clang Static Analyzer