NotificationWindow: fix memory leak

Thanks to mt for analysis of the problem. Fixed in a different way from
the original patch.

Fixes #13135.